--- a/app/views/coupons/index.html.erb
+++ b/app/views/coupons/index.html.erb
@@ -1,5 +1,5 @@
 div>
   <% @coupons.each do |coupon| %>
-    <div><%= link_to coupon.to_s, coupon_path(student) %></div>
+    <div><%= link_to coupon.to_s, coupon_path(coupon) %></div>
   <% end %>
 </div>
