--- a/app/views/coupons/index.html.erb
+++ b/app/views/coupons/index.html.erb
@@ -1,5 +1,9 @@
-div>
-  <% @coupons.each do |coupon| %>
-    <div><%= link_to coupon.to_s, coupon_path(coupon) %></div>
-  <% end %>
-</div>
+<h2>Coupons</h2>
+<div>
+  <%= Coupon.all.each do |coupon| %>
+  <div>
+    <%= coupon.store %>
+    <%= link_to coupon.coupon_code, coupon_path(coupon) %>
+    </div
+    <%end%>
+  </div>
